tests/negative/neg_pr113_variant_multi_choice.safe
package Neg_PR113_Variant_Multi_Choice
   type Packet (Kind : Character = 'A') is
      record
         case Kind
            when 'A', 'B'
               Value : Integer;

